@@ -42,7 +42,7 @@ $GLOBALS['TL_LANG']['tl_iso_payment_modules']['paypal_account']			= array('PayPa
 $GLOBALS['TL_LANG']['tl_iso_payment_modules']['paypal_business']		= array('Artikelbezeichnung', 'Diese Bezeichnung wird für Ihre Bestellung bei PayPal angezeigt.');
 $GLOBALS['TL_LANG']['tl_iso_payment_modules']['postsale_mail']			= array('E-Mail Vorlage für Statusänderungen', 'Wählen Sie eine E-Mail Vorlage wenn bei Statusänderungen der Systemadministrator benachrichtigt werden soll.');
 $GLOBALS['TL_LANG']['tl_iso_payment_modules']['postfinance_pspid']		= array('Postfinance PSPID', 'Die PSPID ist Ihr eindeutiger Erkennungsname im Postfinance-System.');
-$GLOBALS['TL_LANG']['tl_iso_payment_modules']['postfinance_secret']		= array('Postfinance Geheimschlüssel', 'Diese Daten werden zur Prüfung der Zahlungsübergabe verwendet (Punkt 3.2 in den technischen Einstellungen).');
+$GLOBALS['TL_LANG']['tl_iso_payment_modules']['postfinance_secret']		= array('Postfinance SHA-1 Signatur', 'Diese Daten werden zur Prüfung der Zahlungsübergabe verwendet.');
 $GLOBALS['TL_LANG']['tl_iso_payment_modules']['postfinance_method']		= array('Postfinance Methode', 'Art der Datenübermittlung seitens Postfinance (Punkt 1.1 in den technischen Einstellungen).');
 $GLOBALS['TL_LANG']['tl_iso_payment_modules']['button']					= array('Bestellen-Button', 'Wählen Sie ein Bild falls Sie einen eigenen Bestellen-Button darstellen möchten.');
 $GLOBALS['TL_LANG']['tl_iso_payment_modules']['debug']					= array('Testsystem verwenden', 'Aktivieren Sie diese Option um ein Testsystem zu verwenden, auf dem keine echten Zahlungen ausgeführt werden.');
