@@ -5,6 +5,7 @@ Isotope eCommerce Changelog
 Version 0.2.9 (2011-05-??)
 ------------------------------
 - Improved: Show disabled shipping and payment modules on frontend preview
+- Improved Postfinance payment module with new authentication method (Ticket #235)
 - Fixed bug when products have no SKU
 
 Version 0.2.8 (2011-05-09)
